2005-02-11 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Added new "getCPU" method to ICModule.
	* ICModule.java
	* CModule.java

2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Core support for the Modules view.
	* ICDebugTarget.java
	* ICModule.java: new
	* CoreModelMessages.properties
	* CDebugTarget.java
	* CModule.java: new
	* CModuleManager.java: new

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	ICWatchpoint should extend ILineBreakpoint to allow watchpoints to be shown in editors.
	* ICWatchpoint.java
	* CWatchpoint.java

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	* CDIDebugModel.java

2005-02-02 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	Added new "createWatchpoint" method that accepts position information.
	* CDIDebugModel.java

2005-01-19 Mikhail Khodjaiants
	Fix for bug 83051: Add global variables deletes existing ones when new added.
	* ICGlobalVariableManager.java
	* CGlobalVariableManager.java
	* CVariableFactory.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82858: NPE when adding global variable to variable view.
	* CDebugTarget.java
	* CVariableFactory.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82800: Make "Resume At Line" action retargettable.
	CDebugElement should provide an adapter to ICDebugTarget.
	* CDebugElement.java

2005-01-18 Mikhail Khodjaiants
	Fix for bug 82800: Make "Resume At Line" action retargettable.
	CStackFrame should provide an adapter to IJumpToLine and IJumpToAddress.
	* CStackFrame.java

2005-01-12 Mikhail Khodjaiants
	Bug 73168: Use memory view provided by Eclipse platform in CDT. 
	Removed the old memory view.
	* CDebugCorePlugin.java
	* CDebugModel.java: removed
	* ICMemoryManager.java: removed